# spitfire-v2

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: board.cpp  board.h  definitions.h  game.cpp  game.h  move.cpp  move.h  movegen.cpp  movegen.h  moves.cpp  moves.h
src/eval/: eval_constants.h  evaluation.cpp  evaluation.h  heuristics.cpp  heuristics.h
src/search/: hashing.cpp  hashing.h  search.cpp  search.h
src/utils/: display.cpp  display.h  input.cpp  input.h  uci.cpp  uci.h
tests/: test_movegen.cpp  test_movegen.h
